[workspace]
members = [
    "contracts/token",
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/privacy_token",
    "contracts/privacy_trading",
    "shared",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.3.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
